Fixed problem with Amarok showing wrong track length for Last.fm streams. Patch by Michael Quinn <mike@quinnsoft.com>.

BUG: 188512

svn path=/trunk/extragear/multimedia/amarok/; revision=955976